<resources>
    <string name="app_name">Steady</string>
    <string name="title_search">Search Bar</string>
    <string name="title_browse">Browse</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_more">More</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign-in</string>
    <string name="register">Register</string>
    <string name="login_in_progress">Logging in...</string>
    <string name="no_email_pw">Please fill in both the username and password fields</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="contact_num">Contact number</string>
    <string name="hard_hearing">Hard of hearing</string>
    <string name="caregiver">Caregiver</string>
    <string name="validate_text">Please ensure that all fields are filled in properly</string>
    <string name="search_welcome">How can we help?</string>
    <string name="search_greeting">Hi %1$s</string>
    <string name="title_activity_service_detail">ServiceDetailActivity</string>

</resources>
